- Animation rendering is splitted: Unit has Render() method and calls renderer
- States like "move/holdingGold" are Unit attributes
- Rename EOrder to ECommand
- New class "WorkerUnit" (inherit from Unit)
- Basic pathfinding implementation (with Breadth First Search)
- New BuildTile coordinates (uses in map rendering, and building stuff)
- Units are responsible of how they handle a RightClick event (when selected)
- Unit pops at a suitable location once trained or when construction is ended
===============================================================================

===============================================================================
* v0.6
===============================================================================
- Townhall can be build from peon
- Order which need a destination is handled
- Render building for building placement
- Units takes time to be trained (according to their unit description)
- Render different building state according to construction ETA
- Building in construction or unit being trained can be canceled
- Render progress bar for unit training and building construction
- Screen scrolling with keyboard or mouse
- FPS counter in window's title
- All position related stuff is in 'float' type now instead of 'int'
- Unit moves with speed defined in its UnitDesc
- Basic collision check on unit move
===============================================================================

===============================================================================
* v0.5
===============================================================================
- HUD rendering (background, empty minimap, selection info icons, available
  order from current selected unit)
- Peon can be train (created and added to world) from townhall
- Refactor: A lots of structure have become classes
- Order handling
- Filenames renamed to lowercase
- Unit has now two state: move and action
- Singleton implementation