@@ -9,8 +9,10 @@
 - New class "WorkerUnit" (inherit from Unit)
 - Basic pathfinding implementation (with Breadth First Search)
 - New BuildTile coordinates (uses in map rendering, and building stuff)
+- New WalkTile coordinates (mainly uses in pathfinding)
 - Units are responsible of how they handle a RightClick event (when selected)
 - Unit pops at a suitable location once trained or when construction is ended
+- Lots of code maintenance
 ===============================================================================
 
 ===============================================================================
